welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: value - is not a member of Array[Int]
  for ( i <- 0 to num-2 ) {
                     ^